[package]
name = "testcrate"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
awint = { version = "0.2", default-features = false, features = ["alloc"] }
rand_xoshiro = { version = "0.6", default-features = false }
u64_array_bigints = { path = "../u64_array_bigints", default-features = false, features = ["rand_support", "serde_support"] }

[features]
default = ["use_parity_uint"]
use_parity_uint = ["u64_array_bigints/use_parity_uint"]
