[package]
name = "u64_array_bigints"
version = "0.1.0"
edition = "2021"
authors = ["Aaron Kutch <aaronkutch@att.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AaronKutch/u64_array_bigints"
documentation = "https://docs.rs/u64_array_bigints"
description = "Simple biginteger library based on u64 arrays"
keywords = ["bigint", "no_std"]
categories = ["data-structures", "no-std"]

[dependencies]
bytemuck = { version = "1.7", default-features = false }
rand_core = { version = "0.6", default-features = false, optional = true }
serde = { version = "1.0", optional = true }
uint = { version = "0.9", default-features = false, optional = true }

[dev-dependencies]
awint = { version = "0.2", default-features = false, features = ["alloc"] }
rand_xoshiro = { version = "0.6", default-features = false }

[features]
default = ["rand_support", "serde_support", "use_parity_uint"]
rand_support = ["rand_core"]
serde_support = ["serde"]
use_parity_uint = ["uint"]
