[package]
name = "u64_array_bigints"
version = "0.3.1"
edition = "2021"
authors = ["Aaron Kutch <aaronkutch@att.net>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/AaronKutch/u64_array_bigints"
documentation = "https://docs.rs/u64_array_bigints"
description = "Simple biginteger library based on u64 arrays"
keywords = ["bigint", "no_std"]
categories = ["data-structures", "no-std"]

[dependencies]
u64_array_bigints_core = { version = "0.3.1", path = "../u64_array_bigints_core", default-features = false }
u64_array_bigints_macros = { version = "0.3.1", path = "../u64_array_bigints_macros", default-features = false }

[features]
default = ["rand_support", "serde_support"]
rand_support = ["u64_array_bigints_core/rand_support"]
serde_support = ["u64_array_bigints_core/serde_support"]
use_parity_uint = ["u64_array_bigints_core/use_parity_uint"]
