[package]
name = "u64_array_bigints_core"
version = "0.3.2"
edition = "2021"
authors = ["Aaron Kutch <aaronkutch@att.net>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/AaronKutch/u64_array_bigints"
documentation = "https://docs.rs/u64_array_bigints"
description = "Core library for `u64_array_bigints`"
keywords = ["bigint", "no_std"]
categories = ["data-structures", "no-std"]

[dependencies]
bytemuck = { version = "1.10", default-features = false }
rand_core = { version = "0.6", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
uint = { version = "0.9", default-features = false, optional = true }

[dev-dependencies]
awint = { version = "0.8", default-features = false, features = ["alloc"] }
rand_xoshiro = { version = "0.6", default-features = false }
# for doc examples
u64_array_bigints = { path = "../u64_array_bigints", default-features = false }

[features]
default = ["rand_support", "serde_support"]
rand_support = ["rand_core"]
serde_support = ["serde"]
use_parity_uint = ["uint"]
